fix the overflow on product name

--- a/NUMP/static/css/style.css
+++ b/NUMP/static/css/style.css
@@ -122,7 +122,7 @@ main {
     padding: 30px;
 }
 
-.container div{
+.container .section{
     width: 300px;
     height: 500px;
 }
@@ -159,6 +159,8 @@ main {
 }
 
 .new-product-display{
+    width: 300px;
+    height: 500px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -229,11 +231,23 @@ main {
     width: 80%;
 }
 
+.product-name-container h2{
+    font-size: 18px;
+    height: 75px;
+    word-wrap: break-word;
+    text-wrap: wrap;
+    overflow: auto;
+}
+
 .product-name{
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-family: Georgia, 'Times New Roman', Times, serif;
     margin-top: 10px;
     margin-bottom: 10px;
+    height: 100px;
+    word-wrap: break-word;
+    text-wrap: wrap;
+    overflow: auto;
 }
 
 .price-stocks{
